--- a/6/6_DB.csproj
+++ b/6/6_DB.csproj
@@ -73,6 +73,12 @@
     <Compile Include="authorization.Designer.cs">
       <DependentUpon>authorization.cs</DependentUpon>
     </Compile>
+    <Compile Include="ChangeDatabase.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ChangeDatabase.Designer.cs">
+      <DependentUpon>ChangeDatabase.cs</DependentUpon>
+    </Compile>
     <Compile Include="DataBase.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -87,17 +93,14 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Statictics.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Statictics.Designer.cs">
-      <DependentUpon>Statictics.cs</DependentUpon>
-    </Compile>
     <EmbeddedResource Include="About.resx">
       <DependentUpon>About.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="authorization.resx">
       <DependentUpon>authorization.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ChangeDatabase.resx">
+      <DependentUpon>ChangeDatabase.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DataBase.resx">
       <DependentUpon>DataBase.cs</DependentUpon>
@@ -114,9 +117,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Statictics.resx">
-      <DependentUpon>Statictics.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="Audio_libDataSet.xsc">
       <DependentUpon>Audio_libDataSet.xsd</DependentUpon>
     </None>
